[project]
name = "aula-17-sqlalchemy"
version = "0.1.0"
description = ""
authors = [
    {name = "Jorge Veras",email = "jverasfh@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (>=2.0.43,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
